# hat

./: .env  .gitignore  LICENSE  PROJECT.md  README.md  docker-compose.yml  package-lock.json  package.json  readthedocs.yml  uml_2_pages.drawio  webpack.config.dev.js  webpack.config.prod.js
.github/workflows/: tests.yml
backend/: .coveragerc  .gitignore  Dockerfile  config.py  debug_run.py  dictionary.py  game.py  gunicorn.conf.py  main.py  pyproject.toml  room.py  run.py  singleton.py  statistics.py  test_dict.py
backend/app/: __init__.py  app_factory.py  views.py
backend/app/main/: __init__.py  config_helper.py  events.py  game.py  room.py  statistics.py  views.py
backend/instance/: config.py
backend/instance/dictionaries_data/: dictionary_ru.txt  dictionary_sample.txt
backend/patterns/: singleton.py
backend/tests/: conftest.py  dictionary_test.py  flask_fixtures.py  game_test.py  room_test.py  singleton_test.py  statistics_test.py
backend/words_controller/: dictionary.py
docs/source/: conf.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  vue.config.js  webpack.config.dev.js  webpack.config.prod.js
frontend/public/: index.html
frontend/src/: App.vue  api.js  common_locales.js  index.js  main.js  mystyles.css  mystyles.scss  router.js  translations.js  utils.js  validation.js  validation_ru.json
frontend/src/.sass-cache/c825a17a3308f4244a2fb15da03020d9aee34dab/: mystyles.scssc
frontend/src/components/inputs/: BInputWithValidation.vue  BSelectWithValidation.vue
frontend/src/components/login_stages/: SetRoom.vue  SetUsername.vue
frontend/src/components/page_components/: Footer.vue  Navbar.vue
frontend/src/components/play_stages/: Explanation.vue  GameSetup.vue  Statistics.vue  Waiting.vue  WaitingRound.vue
frontend/src/store/: index.js
frontend/src/views/: Help.vue  Index.vue  Login.vue  Play.vue  Policy.vue
hat.dockerapp/: docker-compose.yml  metadata.yml  parameters.yml
nginx/: nginx.conf
public/: index.html
src/: index.js
