[tool.poetry]
name = "mipt-tp-game-backend"
version = "0.1.0"
description = ""
authors = ["Alekseev Aleksandr <alekseev2002@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
