[tool.poetry]
name = "mipt-tp-game-backend"
version = "0.1.0"
description = ""
authors = ["Alekseev Aleksandr <alekseev2002@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-socketio = "^4.2.1"
eventlet = "^0.25.1"
gunicorn = "^20.0.4"
loguru = "^0.4.1"
namelist = "^0.1.0"
namedlist = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
