[tool.poetry]
name = "mipt-tp-game-backend"
version = "0.1.0"
description = ""
authors = ["Alekseev Aleksandr <alekseev2002@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
flask-socketio = "^4.2.1"
eventlet = "^0.25.1"
gunicorn = "^20.0.4"
loguru = "^0.4.1"
namedlist = "^1.7"
pytest = "^5.4.1"
sphinx = "^3.0.0"
sphinx-rtd-theme = "^0.4.3"
pprint = "^0.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"

[tool.taskipy.tasks]
test = "python3 -m pytest tests/"
flask = "gunicorn app.wsgi:app"

docs-html = "sphinx-build -b html ../docs/source ../ocs/build/html"
docs-epub = "sphinx-build -b epub ../docs/source ../docs/build/epub"
docs-text = "sphinx-build -b text ../docs/source ../docs/build/text"
docs-man = "sphinx-build -b man ../docs/source ../docs/build/man"
docs-xml = "sphinx-build -b xml ../docs/source ../docs/build/xml"
docs-latex = "sphinx-build -b latex ../docs/source ../docs/build/latex"
docs-latexpdf = "sphinx-build -b latex ../docs/source docs/build/latexpdf; make -C ../docs/build/latexpdf"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

